fix colors, card alignment, bump version, etc.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,4 +5,9 @@
     gap: 5px;
     margin: 20px 5px;
     justify-content: center;
+    align-items: center;
+}
+
+.searchBar {
+    overflow: hidden;
 }
